fix: bump up line height for readability

--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  font: 300 2rem / 1.5 var(--font);
+  font: 300 2rem / 1.6 var(--font);
   letter-spacing: .2px;
   text-rendering: optimizeSpeed;
 
